--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   github: StephanieArgy
   instagram:
   linkedin:
-  pinterest:
+  pinterest: stephanieargy
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
